--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,15 @@ db.sqlite3
 media
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
-# in your Git repository. Update and uncomment the following line accordingly.
+
+### Vue ###
+.DS_Store
+node_modules
+test/e2e/mock-template-build
+*.log
+dist/
+
+:wiiii# in your Git repository. Update and uncomment the following line accordingly.
 # <django-project-name>/staticfiles/
 
 # End of https://www.gitignore.io/api/django,angular
