--- a/vue_front/package.json
+++ b/vue_front/package.json
@@ -15,6 +15,10 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "bootstrap": "^3.3.7",
+    "less": "^2.7.3",
+    "less-loader": "^4.0.5",
+    "log": "^1.4.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
