--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ __pycache__/
 local_settings.py
 db.sqlite3
 media
+prod.py
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 
